--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-drop-upload",
   "version": "1.0.0",
   "description": "Drop and Upload Images with Ease",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
@@ -29,6 +30,7 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "storybook": "^7.0.18"
   },
   "peerDependencies": {
