--- a/package.json
+++ b/package.json
@@ -37,4 +37,5 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
+  ,"keywords": [ "react-drop", "react", "drop-upload","upload","image-upload" ]
 }
