--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-drop-upload",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Drop and Upload Images with Ease",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -36,6 +36,12 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
-  ,"keywords": [ "react-drop", "react", "drop-upload","upload","image-upload" ]
+  },
+  "keywords": [
+    "react-drop",
+    "react",
+    "drop-upload",
+    "upload",
+    "image-upload"
+  ]
 }
